--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>Dangerous.Tech</title>
-
-<meta name="description" content="">
-<meta name="author" content="">
+<title></title>
+<meta name="keywords" content="blog, devops, security" />
+<meta name="description" content="Networking, Security and Code">
+<meta name="author" content="Josh J">
 <link rel="canonical" href="http://josh.services/" />
 <link crossorigin="anonymous" href="/assets/css/stylesheet.min.5e2b4101351c21e906f398ae96901791830f58d430f96f2659dab7eaef7b3cb7.css" integrity="sha256-XitBATUcIekG85iulpAXkYMPWNQw&#43;W8mWdq36u97PLc=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://josh.services/favicon.ico">
@@ -28,50 +28,22 @@
         }
 
     </style>
-    <style>
-        @media (prefers-color-scheme: dark) {
-            :root {
-                --theme: rgb(29, 30, 32);
-                --entry: rgb(46, 46, 51);
-                --primary: rgb(218, 218, 219);
-                --secondary: rgb(155, 156, 157);
-                --tertiary: rgb(65, 66, 68);
-                --content: rgb(196, 196, 197);
-                --hljs-bg: rgb(46, 46, 51);
-                --code-bg: rgb(55, 56, 62);
-                --border: rgb(51, 51, 51);
-            }
-
-            .list {
-                background: var(--theme);
-            }
-
-            .list:not(.dark)::-webkit-scrollbar-track {
-                background: 0 0;
-            }
-
-            .list:not(.dark)::-webkit-scrollbar-thumb {
-                border-color: var(--theme);
-            }
-        }
-
-    </style>
-</noscript><meta property="og:title" content="Dangerous.Tech" />
-<meta property="og:description" content="" />
+</noscript><meta property="og:title" content="" />
+<meta property="og:description" content="Networking, Security and Code" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://josh.services/" />
+<meta property="og:url" content="http://josh.services/" /><meta property="og:site_name" content="Dangerous.Tech" />
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Dangerous.Tech"/>
-<meta name="twitter:description" content=""/>
+<meta name="twitter:title" content=""/>
+<meta name="twitter:description" content="Networking, Security and Code"/>
 
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "Dangerous.Tech",
+  "name": "",
   "url": "http://josh.services/",
-  "description": "",
+  "description": "Networking, Security and Code",
   "thumbnailUrl": "http://josh.services/favicon.ico",
   "sameAs": [
       
@@ -80,14 +52,10 @@
 </script>
 </head>
 
-<body class="list" id="top">
+<body class="list dark" id="top">
 <script>
-    if (localStorage.getItem("pref-theme") === "dark") {
-        document.body.classList.add('dark');
-    } else if (localStorage.getItem("pref-theme") === "light") {
+    if (localStorage.getItem("pref-theme") === "light") {
         document.body.classList.remove('dark')
-    } else if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
-        document.body.classList.add('dark');
     }
 
 </script>
@@ -95,7 +63,6 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://josh.services/" accesskey="h" title="Dangerous.Tech (Alt + H)">Dangerous.Tech</a>
             <span class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -127,7 +94,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2021 <a href="http://josh.services/">Dangerous.Tech</a></span>
+    <span>&copy; 2021 <a href="http://josh.services/"></a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
