--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>404 Page not found | </title>
+<title>404 Page not found | Dangerous.Tech</title>
 <meta name="keywords" content="" />
 <meta name="description" content="Networking, Security and Code">
 <meta name="author" content="Josh J">
@@ -30,7 +30,7 @@
 </noscript><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Networking, Security and Code" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://josh.services/404.html" /><meta property="og:site_name" content="Dangerous.Tech" />
+<meta property="og:url" content="http://josh.services/404.html" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
@@ -49,6 +49,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
+            <a href="http://josh.services/" accesskey="h" title="Dangerous.Tech (Alt + H)">Dangerous.Tech</a>
             <span class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -81,7 +82,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2021 <a href="http://josh.services/"></a></span>
+    <span>&copy; 2021 <a href="http://josh.services/">Dangerous.Tech</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
