--- a/test-post/index.html
+++ b/test-post/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>Test Post | </title>
+<title>Test Post | Dangerous.Tech</title>
 <meta name="keywords" content="" />
 <meta name="description" content="A test post">
 <meta name="author" content="Josh J">
@@ -34,7 +34,7 @@
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://josh.services/test-post/" /><meta property="article:section" content="" />
 
-<meta property="og:site_name" content="Dangerous.Tech" />
+
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Test Post"/>
@@ -80,7 +80,7 @@
   },
   "publisher": {
     "@type": "Organization",
-    "name": "",
+    "name": "Dangerous.Tech",
     "logo": {
       "@type": "ImageObject",
       "url": "http://josh.services/favicon.ico"
@@ -101,6 +101,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
+            <a href="http://josh.services/" accesskey="h" title="Dangerous.Tech (Alt + H)">Dangerous.Tech</a>
             <span class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -153,7 +154,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2021 <a href="http://josh.services/"></a></span>
+    <span>&copy; 2021 <a href="http://josh.services/">Dangerous.Tech</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
