deploy: f5952e583472ebe4126d317f43fa103408381938

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </noscript><meta property="og:title" content="Dangerous.Tech" />
 <meta property="og:description" content="Networking, Security and Code" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://josh.services/" />
+<meta property="og:url" content="http://josh.services/" /><meta property="og:site_name" content="Dangerous.Tech" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Dangerous.Tech"/>
