--- a/test-post/index.html
+++ b/test-post/index.html
@@ -34,7 +34,7 @@
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://josh.services/test-post/" /><meta property="article:section" content="" />
 
-
+<meta property="og:site_name" content="Dangerous.Tech" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Test Post"/>
