--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
 </noscript><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Networking, Security and Code" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://josh.services/404.html" />
+<meta property="og:url" content="http://josh.services/404.html" /><meta property="og:site_name" content="Dangerous.Tech" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
