--- a/search/index.html
+++ b/search/index.html
@@ -125,6 +125,21 @@
             </span>
         </div>
         <ul id="menu">
+            <li>
+                <a href="https://josh.services/categories/" title="categories">
+                    <span>categories</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://josh.services/tags/" title="tags">
+                    <span>tags</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://josh.services/search/" title="search (Alt &#43; /)" accesskey=/>
+                    <span class="active">search</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
