--- a/search/index.html
+++ b/search/index.html
@@ -10,6 +10,7 @@
 <meta name="description" content="Search - Dangerous.Tech">
 <meta name="author" content="Josh J">
 <link rel="canonical" href="https://josh.services/search/" />
+<meta name="google-site-verification" content="UrkXfbKDvbQe2Rq2lYKFj4-uHVOHtSzsmpnCXEs2ewI" />
 <link crossorigin="anonymous" href="/assets/css/stylesheet.min.5e2b4101351c21e906f398ae96901791830f58d430f96f2659dab7eaef7b3cb7.css" integrity="sha256-XitBATUcIekG85iulpAXkYMPWNQw&#43;W8mWdq36u97PLc=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
 <script defer crossorigin="anonymous" src="/assets/js/search.min.559df37e6e5a8cf9bada12981aafda23304f70eb49f97e9ba68ddb4de54beece.js" integrity="sha256-VZ3zfm5ajPm62hKYGq/aIzBPcOtJ&#43;X6bpo3bTeVL7s4="></script>
 <link rel="icon" href="https://josh.services/favicon.ico">
@@ -28,7 +29,19 @@
         }
 
     </style>
-</noscript><meta property="og:title" content="Search" />
+</noscript>
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	ga('create', 'UA-145767825-1', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script><meta property="og:title" content="Search" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://josh.services/search/" /><meta property="article:section" content="" />
