deploy: 60322a7ee0b3feda03c31c04a191fd546577679f

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ if (!doNotTrack) {
   "description": "Networking, Security, and Code",
   "thumbnailUrl": "https://josh.services/favicon.ico",
   "sameAs": [
-      "https://twitter.com/biodr0ne", "https://github.com/dangerous.tech", "index.xml"
+      "https://twitter.com/biodr0ne", "https://github.com/dangeroustech", "index.xml"
   ]
 }
 </script>
@@ -142,7 +142,7 @@ if (!doNotTrack) {
     </path>
 </svg>
     </a>
-    <a href="https://github.com/dangerous.tech" target="_blank" rel="noopener noreferrer me" title="Github">
+    <a href="https://github.com/dangeroustech" target="_blank" rel="noopener noreferrer me" title="Github">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
     stroke-linecap="round" stroke-linejoin="round">
     <path
